# toolkit

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
labelme_toolkit/: _labelme.py
labelme_toolkit/_cli/: __init__.py  _extract_image.py  _install_toolkit_pro.py  _json_to_mask.py  _json_to_visualization.py  _list_labels.py
labelme_toolkit/_data/: dogs.json  dogs_rectangle.json
