[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "labelme-toolkit"
description = "Labelme Toolkit"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1.8",
  "imgviz>=1.7.6",
  "jinja2>=3.1.5",
  "loguru>=0.7.3",
  "numpy>=2.0.2",
  "osam>=0.2.0",
  "Pillow>=10.1",
]
dynamic = ["readme", "version"]

[dependency-groups]
dev = [
  "build>=1.2.2.post1",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-xdist>=3.6.1",
  "ruff>=0.9.2",
  "twine>=6.0.1",
  "types-pillow>=10.2.0.20240822",
  "types-setuptools>=75.8.0.20250110",
]

[project.urls]
Homepage = "https://github.com/labelmeai/toolkit"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[project.scripts]
labelmetk = "labelme_toolkit.__main__:main"

[tool.setuptools.package-data]
labelme_toolkit = [
  "_data/*",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".conda",
  ".git",
  "src",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`).
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
